--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Low</td>
+      <td><img src="img/Vector (1).png">Low</td>
       <td><p class="status">Open</p></td>
       <td>...</td>
      </tr>
@@ -101,7 +101,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>High</td>
+      <td><img src="img/Vector.png" alt="">High</td>
       <td><p class="res">Resolved</p></td>
       <td>...</td>
      </tr>
@@ -112,7 +112,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Medium</td>
+      <td><img src="img/Vector-1.png" alt="">Medium</td>
       <td><p class="status">Open</p></td>
       <td>...</td>
      </tr>
@@ -123,7 +123,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>High</td>
+      <td><img src="img/Vector.png" alt="">High</td>
       <td><p class="res">Resolved</p></td>
       <td>...</td>
      </tr>
@@ -134,7 +134,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Medium</td>
+      <td><img src="img/Vector-1.png" alt="">Medium</td>
       <td><p class="res">Resolved</p></td>
       <td>...</td>
      </tr>
@@ -145,7 +145,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Low</td>
+      <td><img src="img/Vector (1).png"> Low</td>
       <td><p class="status">Open</p></td>
       <td>...</td>
      </tr>
@@ -156,7 +156,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>High</td>
+      <td><img src="img/Vector.png" alt=""> High</td>
       <td><p class="status">Open</p></td>
       <td>...</td>
      </tr>
@@ -167,7 +167,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Medium</td>
+      <td><img src="img/Vector-1.png" alt=""> Medium</td>
       <td><p class="res">Resolved</p></td>
       <td>...</td>
      </tr>
@@ -178,7 +178,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Low</td>
+      <td><img src="img/Vector (1).png">Low</td>
       <td><p class="status">Open</p></td>
       <td>...</td>
      </tr>
@@ -189,7 +189,7 @@
       <td>29/04/2020</td>
       <td>John Favour</td>
       <td>Block 38, Flat 01</td>
-      <td>Medium</td>
+      <td><img src="img/Vector-1.png" alt="">Medium</td>
       <td><p class="res">Resolved</p></td>
       <td>...</td>
      </tr>
@@ -202,16 +202,16 @@
      <ul class="pagination">
       <li class="page-item">
        <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
+        <span aria-hidden="true"><img src="img/Back (1).png" alt=""></span>
         <span class="sr-only">Previous</span>
        </a>
       </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link active" href="#">1</a></li>
       <li class="page-item"><a class="page-link" href="#">2</a></li>
       <li class="page-item"><a class="page-link" href="#">3</a></li>
       <li class="page-item">
        <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
+        <span aria-hidden="true"><img src="img/Back.png" alt=""></span>
         <span class="sr-only">Next</span>
        </a>
       </li>
